# Zinc

./: .clang-format  .clangd  .gitignore  CMAKE_README.md  CMakeLists.txt  CMakePresets.json  DAG.code-workspace  Makefile  PolyType.code-workspace  README.md  Stainless.code-workspace  Stainless.g4  Zinc.code-workspace  ast.cpp  ast.hpp  build.sh  clean.sh  exception.cpp  exception.hpp  language design.md  lexer.l  main.cpp  object.cpp  object.hpp  operation.hpp  parser.y  pch.hpp  ref.cpp  ref.hpp  test.dag  test.ptf  test.sl  test.zn  type.cpp  type.hpp  value.cpp  value.hpp
.github/workflows/: release-artifact.yml
demo/: main.zn
demos/polymorphism/: Makefile  README.md  main.cpp  main.zn  main_zinc  sdl.d.zn
demos/rasterizer/: Makefile  README.md  benchmark.py  constants.zn  glm.d.zn  main.zn  main.zn.cpp  main_zinc  rasterizer.zn  renderer.zn  sdl.d.zn  utils.zn  window.zn  world.zn
demos/rasterizer/model/: sphere_generator.py
demos/rasterizer/model/cornell-box/: material.mtl  material.txt  scene.txt  sphere_brass.txt
demos/rasterizer/model/light-gallery/: scene.txt
demos/rasterizer/model/metal-gallery/: scene.txt  sphere_chrome.txt  sphere_copper.txt  sphere_gold.txt  sphere_iron.txt
demos/rasterizer/model/transparency-gallery/: scene.txt  sphere.txt  sphere_clear.txt  sphere_diamond.txt
reports/: language design (initial proposal).md  language design.md  week1.md  week2.md  week3.md  week6.md  week7.md  week8.md
src/: Stainless.g4  Zinc.g4  ast.cpp  ast.hpp  builder.hpp  builtins.hpp  codegen.hpp  diagnosis.hpp  entity.cpp  entity.hpp  exception.hpp  main.cpp  meta.hpp  object.cpp  object.hpp  operations.hpp  pch.hpp  runtime.hpp  source.hpp  std.d.zn  symbol_collect.hpp  transpiler.hpp  type_check.hpp  visitor.hpp
test/: bench_main.cpp  test_main.cpp  test_map.hpp  test_set.hpp
tests/: bigint_test.cpp  flat_map_test.cpp  flat_set_test.cpp  main_bench.cpp  main_test.cpp  overload_resolution_test.cpp  template_instantiation_test.cpp  type_interning_test.cpp
tools/: coverage-workflow.sh  printer.py  runtime-converter.py
